@@ -4,7 +4,8 @@
 
 03082007 - Fixed a comment in physfs.h. Renamed win32.c to windows.c.
            Cleaned up whitespace/formatting in pocketpc.c. Updated PocketPC
-           code to expect UTF-8 strings from the higher level.
+           code to expect UTF-8 strings from the higher level. Changed
+           PHYSFS_SUPPORTS_LZMA to PHYSFS_SUPPORTS_7Z.
 11052006 - More 7zip archiver work (thanks, Dennis!). Initial Unicode work.
            Minor BeOS realpath tweak.
 09272006 - Reworked 7zip archiver (thanks, Dennis!).
